--- a/public/index.html
+++ b/public/index.html
@@ -2,6 +2,7 @@
 
 <head>
   <link rel="stylesheet" href="styles.css">
+  <script src="https://kit.fontawesome.com/336fd1b7e9.js" crossorigin="anonymous"></script>
 </head>
 
 <body>
